--- a/docs/guides/run-jobs-session.mdx
+++ b/docs/guides/run-jobs-session.mdx
@@ -259,7 +259,7 @@ from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorV2 as Estimator
 service = QiskitRuntimeService()
 backend = service.least_busy(operational=True, simulator=False)
 
-with Session(service=service, backend="backend") as session:
+with Session(service=service, backend=backend) as session:
     estimator = Estimator()
     job = estimator.run([(circuit, observable)])
     print(session.details())
