--- a/docs/guides/specify-runtime-options.mdx
+++ b/docs/guides/specify-runtime-options.mdx
@@ -55,7 +55,7 @@ Example:
 
 <Tabs>
   <TabItem value="PrimV2" label="V2 primitives">
-    `SamplerV2` and `EstimatorV2` have separate options classes ([`EstimatorOptions`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions) and [`SamplerOptions`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.SamplerOptions)) that do not need to be instantiated, but they can be if you want to pass them in during primitive initialization.
+    `SamplerV2` and `EstimatorV2` have separate options classes ([`EstimatorOptions`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions) and [`SamplerOptions`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.SamplerOptions)).
 
 ```python
 from qiskit_ibm_runtime import QiskitRuntimeService
@@ -131,6 +131,7 @@ You can specify the options in this format: `primitive.options.option.sub-option
 
 <Tabs>
   <TabItem value="PrimV2" label="V2 primitives">
+  The `SamplerV2` and `EstimatorV2` options classes ([`EstimatorOptions`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions) and [`SamplerOptions`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.SamplerOptions)) do not need to be instantiated if you are setting options after initializing the primtiive.
 ```python
 from qiskit_ibm_runtime import QiskitRuntimeService
 from qiskit_ibm_runtime import EstimatorV2 as Estimator
