--- a/docs/guides/classical-feedforward-and-control-flow.ipynb
+++ b/docs/guides/classical-feedforward-and-control-flow.ipynb
@@ -379,7 +379,8 @@
     "## Next steps\n",
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
-    "  -  See an example of dynamic circuits in the [Repeat until success](https://learning.quantum.ibm.com/tutorial/repeat-until-success) tutorial.\n",
+    "  - To learn what's included in the latest release, review the [Qiskit SDK release notes.](/api/qiskit/release-notes/) \n",
+    "  - See an example of dynamic circuits in the [Repeat until success](https://learning.quantum.ibm.com/tutorial/repeat-until-success) tutorial.\n",
     "  -  Review the [circuit library API](/api/qiskit/circuit_library) reference.\n",
     "</Admonition>"
    ]
