--- a/docs/guides/construct-circuits.ipynb
+++ b/docs/guides/construct-circuits.ipynb
@@ -10,10 +10,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b8e2fc2d",
+   "metadata": {},
+   "source": [
+    "_To learn what's included in the latest release, review the [Qiskit SDK release notes.](/api/qiskit/release-notes/)_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c50d8e43-ae82-4e41-8d17-a37332d1bf6d",
    "metadata": {},
    "source": [
-    "This page takes a closer look at the [`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit) class in the Qiskit SDK, including some more advanced methods you can use to create quantum circuits.  To learn what's included in the latest release, review the [Qiskit SDK release notes.](/api/qiskit/release-notes/)"
+    "This page takes a closer look at the [`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit) class in the Qiskit SDK, including some more advanced methods you can use to create quantum circuits.  "
    ]
   },
   {
