--- a/docs/guides/first-serverless-program.ipynb
+++ b/docs/guides/first-serverless-program.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "e17b430a-ec17-4a88-9a71-9ce365059bea",
    "metadata": {},
    "source": [
     "# Write your first Qiskit Serverless program\n",
@@ -11,6 +12,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e3603a5c-78f4-40ec-9568-7a45664acfc7",
    "metadata": {},
    "source": [
     "## Example: remote transpilation with Qiskit Serverless\n",
@@ -21,6 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "fdd25d8f-49e6-4e7e-aecb-d95ea6c408c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,6 +43,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ea182474-7566-4a13-96d8-cfcc8f16dd8f",
    "metadata": {},
    "source": [
     "## Set up your files\n",
@@ -54,7 +58,7 @@
     "     |___ *.py\n",
     "```\n",
     "\n",
-    "Serverless uploads the contents of `source_files` to run remotely. Once these are set up, you can adjust `transpile_remote.py` to fetch inputs and return outputs. \n",
+    "Serverless uploads the contents of `source_files` to run remotely. Once these are set up, you can adjust `transpile_remote.py` to fetch inputs and return outputs.\n",
     "\n",
     "### Get program arguments\n",
     "\n",
@@ -64,6 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a1fbc389-da84-4bac-af3b-94733bf52aad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,6 +85,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bf57e8a8-4f64-4933-978d-c16bda4e0c0c",
    "metadata": {},
    "source": [
     "At this point, you can get your backend with `QiskitRuntimeService`, and add your existing program:"
@@ -88,6 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "da757701-086d-4258-8f4e-e53f0fcea98b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,6 +106,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8bd63bfc-0da5-46de-ace5-8463b5ad92f3",
    "metadata": {},
    "source": [
     "Finally, you can set up running `transpile_remote()` across all `circuits` passed in, and return the `transpiled_circuits` as a result:"
@@ -107,6 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2cb9b713-c451-44e0-9324-7c98d01100a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,6 +133,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a05fa201-aabb-43a5-8a6a-f53c5c664fc4",
    "metadata": {},
    "source": [
     "## Deploy to IBM Quantum Platform\n",
@@ -134,6 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "edcc7903-6a3d-4316-9bed-5dffe5628a5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,6 +158,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7e8327dc-9105-4fb0-9cf0-c6e13ca32674",
    "metadata": {},
    "source": [
     "Qiskit Serverless compresses the contents of `working_dir` (in this case, `source_files`) into a `tar`, which gets uploaded and cleaned up after. The `entrypoint` identifies the main program executable for Qiskit Serverless to run. Additionally, if your program has custom `pip` dependencies, you can add them to a `dependencies` array:"
@@ -155,6 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "62738969-b19c-484e-8591-4f89c99990ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,6 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "ed72ee48-a643-4d2e-b245-6e9ab3673ddb",
    "metadata": {},
    "outputs": [
     {
@@ -188,6 +202,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9a22d507-2489-4f2f-af78-c9249ed3fc3d",
    "metadata": {},
    "source": [
     "To check if it successfully uploaded, use `serverless.list()`:"
@@ -196,6 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "ff7d8283-ee72-4167-8a8a-1f07367ba6ef",
    "metadata": {},
    "outputs": [
     {
@@ -215,15 +231,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f8940b98-33f7-4029-ac77-60058c4aee78",
    "metadata": {},
    "source": [
-    "The next section demonstrates how to pass inputs and run this program remotely. "
+    "The next section demonstrates how to pass inputs and run this program remotely."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -237,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3"
   }
  },
  "nbformat": 4,
