--- a/docs/guides/manage-serverless-resources.ipynb
+++ b/docs/guides/manage-serverless-resources.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "6b7abc7b-b435-43d1-9fd8-c349ee8710f3",
    "metadata": {},
    "source": [
     "# Manage Qiskit Serverless compute and data resources\n",
@@ -13,6 +14,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b2d40a63-3359-46e9-8f1b-4746b449b407",
    "metadata": {},
    "source": [
     "For classical tasks that can be parallelized, use the `@distribute_task` decorater to define compute requirements needed to perform a task. Start by recalling the original `transpile_parallel.py` example:"
@@ -21,6 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "475d82f0-15cc-4db3-b3b0-54b07822b2a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +45,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a5914f1d-f898-4db4-8d1e-ccc8081883b9",
    "metadata": {},
    "source": [
     "In this example, you decorated the `transpile_remote()` method with `@distribute_task(target={\"cpu\": 1})`. When run, this creates an asynchronous parallel workers task with a single CPU core, and returns with a reference to track the worker. To fetch the result, pass the reference to the `get()` method:"
@@ -50,6 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "74fdcd4a-01cd-46ca-aa24-2a8a3605346f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,6 +66,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "268d5ef6-12cf-4ba5-95a3-f7460e4b3bfc",
    "metadata": {},
    "source": [
     "You can also create and run multiple parallel tasks as follows:"
@@ -69,6 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ac99b4a0-4a42-4c43-869d-265344b70359",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,20 +89,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "611fe030-4494-46b5-9ea1-9678ac513210",
    "metadata": {},
    "source": [
     "### Explore different task configurations\n",
     "\n",
-    "You can flexibly allocate CPU, GPU, and memory for your tasks via `@distribute_task()`. For Qiskit Serverless on IBM Quantum Platform, each program is equipped with 16 CPU cores and 32 GB RAM, which can be allocated dynamically as needed. \n",
+    "You can flexibly allocate CPU, GPU, and memory for your tasks via `@distribute_task()`. For Qiskit Serverless on IBM Quantum Platform, each program is equipped with 16 CPU cores and 32 GB RAM, which can be allocated dynamically as needed.\n",
     "\n",
     "CPU cores can be allocated as full CPU cores, or even fractional allocations, as shown in the following.\n",
     "\n",
-    "Memory is allocated as number of bytes. Recall that there are 1024 bytes in a kilobyte, 1024 kilobytes in a megabyte, and 1024 megabytes in a gigabyte. To allocate 2 GB of memory for your worker, you need to allocate `\"mem\": 2 * 1024 * 1024 * 1024` "
+    "Memory is allocated as number of bytes. Recall that there are 1024 bytes in a kilobyte, 1024 kilobytes in a megabyte, and 1024 megabytes in a gigabyte. To allocate 2 GB of memory for your worker, you need to allocate `\"mem\": 2 * 1024 * 1024 * 1024`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cea90969-cfbf-4181-9ffa-524f3709dc69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,15 +118,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f6fff174-301f-47ca-b7c6-69bb5298fd14",
    "metadata": {},
    "source": [
     "## Automatic QPU selection\n",
     "\n",
     "This example demonstrates how to use `IBMQPUSelector` to automate the process of selecting which qubits to use from a set of available QPUs. Instead of manually selecting a QPU, Qiskit Serverless automatically allocates a QPU according to desired criteria. `IBMQPUSelector`s are imported from server-side `qiskit_serverless_tools.selectors` modules, and must be invoked from your uploaded program.\n",
     "\n",
-    "Here, `IBMLeastNoisyQPUSelector` finds the QPU that yields the least-noisy qubit subgraph for the input circuit, from among the QPUs available to you through your IBM Quantum account. \n",
+    "Here, `IBMLeastNoisyQPUSelector` finds the QPU that yields the least-noisy qubit subgraph for the input circuit, from among the QPUs available to you through your IBM Quantum account.\n",
     "\n",
-    "For each `IBMQPUSelector`, the context is set in the constructor. All `IBMQPUSelectors` require Qiskit Runtime credentials. The `IBMLeastNoisyQPUSelector` requires a circuit and transpile options specifying how the circuit should be optimized for each QPU, to determine the most optimal QPU and qubit layout. \n",
+    "For each `IBMQPUSelector`, the context is set in the constructor. All `IBMQPUSelectors` require Qiskit Runtime credentials. The `IBMLeastNoisyQPUSelector` requires a circuit and transpile options specifying how the circuit should be optimized for each QPU, to determine the most optimal QPU and qubit layout.\n",
     "\n",
     "All `IBMQPUSelectors` implement a `get_backend` method, which retrieves the optimal QPU with respect to the given context. The `get_backend` method also allows for additional filtering of the QPUs. It is implemented using the same interface as the [QiskitRuntimeService.backends method](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#backends)."
    ]
@@ -125,17 +135,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b9b38d02-1c4b-4598-abc8-f2ff2f3c1d23",
    "metadata": {},
    "outputs": [],
    "source": [
     "# source_files/transpile_parallel.py\n",
-    " \n",
+    "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "from qiskit.circuit.random import random_circuit\n",
     "from qiskit_serverless_tools.selectors import IBMLeastNoisyQPUSelector\n",
     "\n",
     "service = QiskitRuntimeService(channel='ibm_quantum', token=API_TOKEN)\n",
-    " \n",
+    "\n",
     "abstract_circuit = random_circuit(\n",
     "    num_qubits=5, depth=4, measure=True\n",
     ")\n",
@@ -144,11 +155,12 @@
     "    service, circuit=abstract_circuit, transpile_options={\"optimization_level\": 3}\n",
     ")\n",
     "backend = selector.get_backend(min_num_qubits=127)\n",
-    "target_circuit = selector.optimized_circuit\n"
+    "target_circuit = selector.optimized_circuit"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "8eda9b3e-31c3-4783-b5f6-a72bd31e41b6",
    "metadata": {},
    "source": [
     "You can also use the `IBMLeastBusyQPUSelector` to find a QPU that can support the circuit width but with the shortest queue."
@@ -157,6 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "10bdb211-0d53-4269-aa92-51ecf494bd63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,6 +185,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6bc45489-56d0-4f46-8659-9df4d1555516",
    "metadata": {},
    "source": [
     "## Manage data across your program\n",
@@ -187,6 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "484766e7-01d7-4ed2-b376-ed78f6055f6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,6 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "0183278f-8ce3-4466-9255-097b2d211052",
    "metadata": {},
    "outputs": [
     {
@@ -229,6 +245,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4f762470-945f-48d5-a65b-c60d3b2dae3f",
    "metadata": {},
    "source": [
     "Next, you can list all the files in our `data` directory. This data is accessible to all programs."
@@ -237,6 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "14241fc4-d0cb-4803-8752-a460e1f48708",
    "metadata": {},
    "outputs": [
     {
@@ -256,6 +274,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a97bd83e-8250-43bb-b1c4-d40d822c7ba2",
    "metadata": {},
    "source": [
     "This can be used from a program by using `file_download()` to download the file to the program environment, and uncompressing the `tar`."
@@ -264,6 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "ef649b2a-ed95-4dd2-89d9-61438faa7c1e",
    "metadata": {},
    "outputs": [
     {
@@ -304,6 +324,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5b93dbdb-2060-468b-8496-ba98142a780b",
    "metadata": {},
    "source": [
     "At this point, your program can interact with the files, as you would a local experiment. `file_upload()` , `file_download()`, and `file_delete()` can be called from your local experiment, or your uploaded program, for consistent and flexible data management."
@@ -326,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3"
   }
  },
  "nbformat": 4,
