--- a/docs/guides/run-first-serverless-workload.ipynb
+++ b/docs/guides/run-first-serverless-workload.ipynb
@@ -382,6 +382,8 @@
   }
  ],
  "metadata": {
+  "title": "Run your first Qiskit Serverless workload remotely",
+  "description": "How to list programs available in Serverless, pass inputs into these programs, run them remotely, check status, and retrieve results and logs.",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
