--- a/docs/guides/manage-serverless-resources.ipynb
+++ b/docs/guides/manage-serverless-resources.ipynb
@@ -332,6 +332,8 @@
   }
  ],
  "metadata": {
+  "title": "Manage Qiskit Serverless compute and data resources",
+  "description": "Manage compute and data across your Qiskit pattern with Qiskit Serverless.",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
