--- a/docs/guides/configure-error-mitigation.mdx
+++ b/docs/guides/configure-error-mitigation.mdx
@@ -364,7 +364,7 @@ With the V2 primitives, you can turn on and off individual error mitigation and 
 
 <Admonition type = "note" title = "Notes">
 - Not all options are available for both primitives.   See the [available options table](runtime-options-overview#options-table) for the list of available options.
-- Not all methods work together on all types of circuits.  See the [options compatibility](runtime-options-overview#options-compatibility-table) table for details.
+- Not all methods work together on all types of circuits.  See the [options compatibility table](runtime-options-overview#options-compatibility-table) for details.
 </Admonition>
 
 <Tabs>
