--- a/docs/guides/configure-error-suppression.mdx
+++ b/docs/guides/configure-error-suppression.mdx
@@ -1,6 +1,7 @@
 ---
 title: Configure error suppression
-description: How to configure error suppression in Qiskit Runtime. (Previous topic - runtime compilation)
+description: How to configure error suppression in Qiskit Runtime. (Former title: Runtime 
+ compilation)
 
 ---
 
