--- a/docs/guides/configure-error-suppression.mdx
+++ b/docs/guides/configure-error-suppression.mdx
@@ -1,6 +1,6 @@
 ---
 title: Configure error suppression
-description: How to configure error suppression in Qiskit Runtime. (Former title: Runtime compilation)
+description: How to configure error suppression in Qiskit Runtime. (Former title - Runtime compilation)
 
 ---
 
