--- a/docs/guides/primitive-input-output.ipynb
+++ b/docs/guides/primitive-input-output.ipynb
@@ -21,16 +21,16 @@
     "\n",
     "### Estimator PUB\n",
     "For the Estimator primitive, the format of the PUB should contain at most four values:\n",
-    "- A single `QuantumCircuit`, which may contain one or more [`Parameter`s](../api/qiskit/qiskit.circuit.Parameter)\n",
+    "- A single `QuantumCircuit`, which may contain one or more [`Parameter`](../api/qiskit/qiskit.circuit.Parameter) objects\n",
     "- A list of one or more observables, which specify the expectation values to estimate, arranged into an array (for example, a single observable represented as a 0-d array, a list of observables as a 1-d array, and so on). The data can be in any one of the `ObservablesArrayLike` format such as `Pauli`, `SparsePauliOp`, `PauliList`, or `str`.\n",
-    "- A collection of parameter values to bind the circuit against. This can be specified as a single array-like object where the last index is over circuit `Parameter`s, or omitted (or equivalently, set to `None`) if the circuit has no `Parameter`s.\n",
+    "- A collection of parameter values to bind the circuit against. This can be specified as a single array-like object where the last index is over circuit `Parameter` objects, or omitted (or equivalently, set to `None`) if the circuit has no `Parameter` objects.\n",
     "- (Optionally) a target precision for expectation values to estimate\n",
     "\n",
     "### Sampler PUB\n",
     "For the Sampler primitive, the format of the PUB tuple contains at most three values:\n",
-    "- A single `QuantumCircuit`, which may contain one or more [`Parameter`s](../api/qiskit/qiskit.circuit.Parameter)\n",
+    "- A single `QuantumCircuit`, which may contain one or more [`Parameter`](../api/qiskit/qiskit.circuit.Parameter) objects\n",
     "  - *Note: these circuits should also include measurement instructions for each of the qubits to be sampled.*\n",
-    "- A collection of parameter values to bind the circuit against $\\theta_k$ (only needed if any `Parameter`s are used that must be bound at runtime)\n",
+    "- A collection of parameter values to bind the circuit against $\\theta_k$ (only needed if any `Parameter` objects are used that must be bound at runtime)\n",
     "- (Optionally) a number of shots to measure the circuit with"
    ]
   },
