--- a/docs/guides/manage-serverless-resources.ipynb
+++ b/docs/guides/manage-serverless-resources.ipynb
@@ -290,7 +290,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10.2k/10.2k [00:00<00:00, 10.0MiB/s]"
+      "100%|██████████| 10.2k/10.2k [00:00<00:00, 10.0MiB/s]\n"
      ]
     },
     {
