Update link text (#1789)
closes #1787 

The `s construction when typing code ends up in some weird spacing, so I
reworded these as @frankharkins suggested.

--- a/docs/guides/primitive-input-output.ipynb
+++ b/docs/guides/primitive-input-output.ipynb
@@ -15,22 +15,22 @@
    "id": "04b9204f-f058-433b-89f9-05df14645e27",
    "metadata": {},
    "source": [
-    "## Overview of PUBS\n",
+    "## Overview of PUBs\n",
     "\n",
     "When invoking a primitive's [`run()`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.EstimatorV2#run) method, the main argument that is required is a `list` of one or more tuples -- one for each circuit being executed by the primitive. Each of these tuples is considered a PUB, and the required elements of each tuple in the list depends on the the primitive used. The data provided to these tuples can also be arranged in a variety of shapes to provide flexibility in a workload through broadcasting -- the rules of which are described in a [following section](#broadcasting-rules).\n",
     "\n",
     "### Estimator PUB\n",
     "For the Estimator primitive, the format of the PUB should contain at most four values:\n",
-    "- A single `QuantumCircuit`, which may contain one or more [`Parameter`s](../api/qiskit/qiskit.circuit.Parameter)\n",
+    "- A single `QuantumCircuit`, which may contain one or more [`Parameter`](../api/qiskit/qiskit.circuit.Parameter) objects\n",
     "- A list of one or more observables, which specify the expectation values to estimate, arranged into an array (for example, a single observable represented as a 0-d array, a list of observables as a 1-d array, and so on). The data can be in any one of the `ObservablesArrayLike` format such as `Pauli`, `SparsePauliOp`, `PauliList`, or `str`.\n",
-    "- A collection of parameter values to bind the circuit against. This can be specified as a single array-like object where the last index is over circuit `Parameter`s, or omitted (or equivalently, set to `None`) if the circuit has no `Parameter`s.\n",
+    "- A collection of parameter values to bind the circuit against. This can be specified as a single array-like object where the last index is over circuit `Parameter` objects, or omitted (or equivalently, set to `None`) if the circuit has no `Parameter` objects.\n",
     "- (Optionally) a target precision for expectation values to estimate\n",
     "\n",
     "### Sampler PUB\n",
     "For the Sampler primitive, the format of the PUB tuple contains at most three values:\n",
-    "- A single `QuantumCircuit`, which may contain one or more [`Parameter`s](../api/qiskit/qiskit.circuit.Parameter)\n",
+    "- A single `QuantumCircuit`, which may contain one or more [`Parameter`](../api/qiskit/qiskit.circuit.Parameter) objects\n",
     "  - *Note: these circuits should also include measurement instructions for each of the qubits to be sampled.*\n",
-    "- A collection of parameter values to bind the circuit against $\\theta_k$ (only needed if any `Parameter`s are used that must be bound at runtime)\n",
+    "- A collection of parameter values to bind the circuit against $\\theta_k$ (only needed if any `Parameter` objects are used that must be bound at runtime)\n",
     "- (Optionally) a number of shots to measure the circuit with"
    ]
   },
@@ -447,7 +447,7 @@
  ],
  "metadata": {
   "celltoolbar": "Raw Cell Format",
-  "description": "Understand the input and output format of the primitives",
+  "description": "Understand the input and output format (including Primitive Unified Blocs or PUBs) of the primitives",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
