--- a/docs/guides/qiskit-serverless.mdx
+++ b/docs/guides/qiskit-serverless.mdx
@@ -26,7 +26,7 @@ Qiskit Serverless helps manage classical and quantum resources across the entire
 To use Qiskit Serverless on IBM Quantum Platform, install the `qiskit-serverless` package:
 
 ```bash
-pip install qiskit_serverless
+pip install qiskit-serverless
 ```
 
 This package requires `python` 3.11+. For users and organizations who want to run Serverless on custom infrastructure, follow the [deploy Qiskit Serverless on custom cloud resources guide](https://qiskit.github.io/qiskit-serverless/cloud.html).
