add more content

--- a/docs/guides/error-mitigation-and-suppression-techniques.ipynb
+++ b/docs/guides/error-mitigation-and-suppression-techniques.ipynb
@@ -127,9 +127,11 @@
    "source": [
     "## Probabilistic Error Amplification (PEA)\n",
     "\n",
-    "The main challenge in successfully implementing [Zero-noise extrapolation(ZNE)](#zne) is to have an accurate model for noise in the expectation value and to amplify the noise in a known way.  For utility-scale experiments, PEA is the most attractive can be applied to any circuit that can be run with native noise factor $(\\lambda - 1)$. \n",
+    "PEA is an aplification technique used with [Zero-noise extrapolation(ZNE)](#zne).  The main challenge in successfully implmenting ZNE is to have an accurate model for noise in the expectation value and to amplify the noise in a known way.  For utility-scale experiments, PEA is often the best choice because it can be applied to any circuit that can be run with native noise factor $(\\lambda - 1)$. \n",
     "\n",
-    "Because PEA is an amplification technique of ZNE, you also need to enable ZNE by setting `resilience.zne_mitigation = True`. Other `resilience.zne` options can be used in conjunction to set extrapolators, amplification levels, and so on. Experiments to learn a sparse Pauli noise model are performed for every uniquely identified entangling layer (up to a specified cutoff) in the union of circuits across primitive unified blocs (PUBs); see the [`LayerNoiseLearningOptions`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.LayerNoiseLearningOptions) API reference for all available options. Add full-width barriers to specify layers unambiguously."
+    "Because PEA is a ZNE amplification technique, you also need to enable ZNE by setting `resilience.zne_mitigation = True`. Other `resilience.zne` options can be used in addition to set extrapolators, amplification levels, and so on. PEA requries a noise model, which is automatically generated when using primitives. \n",
+    "\n",
+    "When the Estimator primitive is used to call `noise-learner`, PEA can reuse the returned noise model. **LINK TO NOISE LEARNER DOCS** "
    ]
   },
   {
@@ -142,6 +144,48 @@
     "estimator = Estimator(mode=backend)\n",
     "estimator.options.resilience.zne_mitigation = True\n",
     "estimator.options.pea = {\"resilience\": {\"zne\": {\"amplifier\": \"pea\"}}}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68268837",
+   "metadata": {},
+   "source": [
+    "<Admonition type=\"note\"> \n",
+    "`EstimatorV2.run` invokes noise learning each time it is called.  Therefore, to ensure that you are using a consistent noise model, it is important to only call `run()` once. \n",
+    "</Admonition>\n",
+    "\n",
+    "Example where noise learning is run twice: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "030e88ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "est_jobs = []\n",
+    "for pub in (pub_1, pub_2):\n",
+    "    est_jobs.append(est.run([pub]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "721b2fae",
+   "metadata": {},
+   "source": [
+    "Example where noise learning is run once:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27763949",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "est_jobs = est.run((pub_1, pub_2))"
    ]
   },
   {
@@ -237,6 +281,7 @@
    "id": "fcc40cb7-45b7-4248-84c4-aa7f26ba50ff",
    "metadata": {},
    "source": [
+    "<span id=\"pec\"></span>\n",
     "## Probabilistic error cancellation (PEC)\n",
     "\n",
     "Probabilistic error cancellation (PEC) is a technique for mitigating errors in estimating expectation values of observables. Unlike ZNE, it returns an unbiased estimate of the expectation value. However, it generally incurs a greater overhead.\n",
