--- a/docs/guides/get-started-with-primitives.mdx
+++ b/docs/guides/get-started-with-primitives.mdx
@@ -337,7 +337,7 @@ backend primitives are designed to run locally in the user's machine.
 
 - The [`qiskit.primitives.BackendSamplerV2`](/api/qiskit/qiskit.primitives.BackendSamplerV2) class requires a backend that supports the `memory` option.
 
-- The backend primitives V2 interfaces expose custom `Sampler` and `Estimator` `Options` for that are different to the Runtime implementations.
+- The backend primitives V2 interfaces expose custom [`Sampler`](/api/qiskit/qiskit.primitives.BackendSamplerV2) and [`Estimator`](/api/qiskit/qiskit.primitives.BackendEstimatorV2) `Options` that are different from the Runtime implementations.
 
 
 ## Next steps
