--- a/docs/guides/synthesize-unitary-operators.mdx
+++ b/docs/guides/synthesize-unitary-operators.mdx
@@ -5,9 +5,9 @@ description: On the implementation of arbitrary unitary matrices on qubits
 
 # Synthesize unitary operations
 
-## What's required
+### What's required
 
-Running the code in this topic requires Qiskit SDK 1.0 or later, with visualization support ( pip install 'qiskit[visualization]' ).
+Running the code in this topic requires Qiskit SDK 1.0 or later, with visualization support ( `pip install qiskit[visualization]` ).
 To learn about the latest changes to Qiskit SDK 1.0, review the most recent [release notes.](/api/qiskit/release-notes)
 
 ## Introduction
