make capitalization consistent

--- a/docs/guides/run-jobs-batch.mdx
+++ b/docs/guides/run-jobs-batch.mdx
@@ -83,7 +83,7 @@ with Batch(service=service, backend=backend, max_time="25m"):
   ...
 ```
 
-There is also an interactive time to live (iTTL) value of 1 second that cannot be configured.  If no batch jobs are queued within that window, the batch is temporarily deactivated.
+There is also an interactive time to live (ITTL) value of 1 second that cannot be configured.  If no batch jobs are queued within that window, the batch is temporarily deactivated.
 
 <span id="close"></span>
 ## Close a batch
