--- a/docs/guides/max-execution-time.mdx
+++ b/docs/guides/max-execution-time.mdx
@@ -54,7 +54,7 @@ To determine the maximum ITTL and TTL values for a session, use the [`session.de
 
 ## Batch maximum execution time
 
-Batches have an ITTL between jobs and a maximum TTL value. If you don't explicitly close a batch, it is deactivated after the ITTL expires and can be reactivated at any time until it reaches its  maximum TTL (usually 28800 seconds, or 8 hours).
+Batches have an ITTL value between jobs and a maximum TTL value. If you don't explicitly close a batch, it is deactivated after the ITTL expires and can be reactivated at any time until it reaches its  maximum TTL (usually 28800 seconds, or 8 hours).
 
 To determine the ITTL and maximum TTL values for a batch, use the [`batch.details()`  method](run-jobs-batch#batch-details) and look for the `interactive_timeout` and `max_time` values, respectively.
 
